--- a/profile-card-with-react/src/index.css
+++ b/profile-card-with-react/src/index.css
@@ -4,6 +4,7 @@ html {
   background-image: url("bg-pattern-top.svg"), url("bg-pattern-bottom.svg");
   background-position: right calc(47vw + 15%) bottom calc(65vh - 15vw), left calc(40vw + 25%) top calc(72vh - 10vw);
   background-repeat: no-repeat;
+  background-attachment: fixed;
   /*background-size: 100vh;*/
 }
 body {
@@ -13,4 +14,5 @@ body {
   align-items: center;
   margin: 0px;
   font-family: kumbh sans;
+  background-attachment: fixed;
 }
