--- a/profile-card-with-react/src/App.css
+++ b/profile-card-with-react/src/App.css
@@ -1,6 +1,6 @@
 @media only screen and (min-width: 768px) {
   /* For mobile phones: */
-  .container {
+  #container {
       width: 450px;
       height: 470px;
       border-width: thin;
@@ -26,7 +26,7 @@
 }
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
-  .container {
+  #container {
     width: 290px;
     max-height: 440px;
     border-width: thin;
