--- a/profile-card-with-react/src/App.css
+++ b/profile-card-with-react/src/App.css
@@ -81,7 +81,7 @@ html {
   background-position: right calc(47vw + 15%) bottom calc(65vh - 15vw), left calc(40vw + 25%) top calc(72vh - 10vw);
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: 100vh;
+  max-height: 100vh;
 }
 body {
   max-height: 100vh;
