--- a/profile-card-with-react/src/index.css
+++ b/profile-card-with-react/src/index.css
@@ -1,18 +1,19 @@
+
 html {
-  margin: auto;
+  margin: 0;
   background-color: hsl(185, 75%, 39%);
   background-image: url("bg-pattern-top.svg"), url("bg-pattern-bottom.svg");
   background-position: right calc(47vw + 15%) bottom calc(65vh - 15vw), left calc(40vw + 25%) top calc(72vh - 10vw);
   background-repeat: no-repeat;
   background-attachment: fixed;
-  /*background-size: 100vh;*/
+  max-height: 100vh;
 }
 body {
-  height: 100vh;
+  max-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0px;
+  margin: 0;
   font-family: kumbh sans;
   background-attachment: fixed;
 }
