--- a/profile-card-with-react/src/App.css
+++ b/profile-card-with-react/src/App.css
@@ -27,7 +27,7 @@
   /* For mobile phones: */
   #container {
       width: 290px;
-      max-height: 465px;
+      min-height: 465px;
       border-width: thin;
       border-radius: 24px;
       font-family: kumbh sans;
@@ -70,7 +70,7 @@ html {
   background-position: right calc(47vw + 15%) bottom calc(65vh - 15vw), left calc(40vw + 25%) top calc(72vh - 10vw);
   background-repeat: no-repeat;
   /*background-size: 100vh;*/
-  max-height: 100vh;
+  height: 100vh;
 }
 body {
   height: 100vh;
